# flam-rnd-intern-assessment

./: README.md
app/: build.gradle.kts
app/src/androidTest/java/com/flam/edgeviewer/: ExampleInstrumentedTest.kt  MyGLRenderer.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  gles2_lib.cpp  native-lib.cpp
app/src/main/java/com/flam/edgeviewer/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/flam/edgeviewer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
web/: index.html  tsconfig.json  viewer.ts
